<resources>
    <string name="app_name">MyAdressBook</string>
    <string name="txt_phone">手机号</string>
    <string name="txt_password">密码</string>
    <string name="txt_login">登录</string>
    <string name="txt_forget">忘记密码</string>
    <string name="txt_reg">注册账号</string>
    <string name="txt_fast">无账号快捷登录</string>
    <string name="txt_sinaweibo">新浪微博登录</string>
    <string name="txt_qq">腾讯qq登录</string>
    <string name="txt_inputphone">请输入手机号码</string>
    <string name="txt_seed">发送</string>
    <string name="txt_inputnewpwd">请输入新的密码</string>
    <string name="txt_comfirepwd">请再次输入密码</string>
    <string name="txt_commit">提交</string>
    <string name="txt_inputpwd">请输入密码</string>
    <string name="txt_code">请输入接收的验证码</string>
    <string name="txt_home">首页</string>
    <string name="txt_contacts">联系人</string>
    <string name="txt_me">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_personal">个人</string>
    <string name="txt_group">群组</string>
    <string name="txt_search">搜索</string>
    <string name="txt_personInfo">个人信息</string>
    <string name="txt_username">用户名</string>
    <string name="bt_seed_mes">发消息</string>
    <string name="txt_group_info">群组信息</string>
</resources>
