<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yzbz.myadressbook.ui.RegActivity">

    <EditText
        android:drawableLeft="@mipmap/icon_lock"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_pwd"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/txt_inputpwd"
        android:password="true" />

    <EditText
        android:drawablePadding="10dp"
        android:drawableLeft="@mipmap/icon_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/et_comfirpwd"
        android:layout_below="@+id/et_pwd"
        android:layout_marginTop="36dp"
        android:hint="@string/txt_comfirepwd" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/txt_commit"
        android:id="@+id/bt_commit"
        android:layout_marginTop="55dp"
        android:background="@color/blue"
        android:layout_below="@+id/et_comfirpwd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>


</RelativeLayout>
