<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yzbz.myadressbook.ui.PersonInfoActivity">
    <include layout="@layout/layout_actionbar"
        android:id="@+id/actionbarLayout"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_personInfo"
        android:id="@+id/tv_title"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light" />
    <Button
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:background="@mipmap/icon_back"
        android:layout_marginTop="5dp"
        android:id="@+id/bt_back" />

    <LinearLayout
        android:layout_below="@id/actionbarLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/linearLayout2">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/ic_launcher"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_username"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="93dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/bt_seed_mes"
        android:background="@color/blue"
        android:id="@+id/bt_seed_mes" />
</RelativeLayout>
