<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yzbz.myadressbook.ui.HomeActivity">
    <include layout="@layout/layout_actionbar"
        android:id="@+id/include" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_home"
        android:id="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container"
        android:layout_below="@+id/include"
        android:layout_above="@+id/line">

    </FrameLayout>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@+id/rg_home"
        android:background="#ff000000" />

    <RadioGroup
        android:id="@+id/rg_home"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:layout_weight="1"
            android:text="@string/txt_home"
            android:id="@+id/bt_home"
            android:button="@null"
            android:gravity="center"
            android:checked="false" />
        <RadioButton
            android:button="@null"
            android:gravity="center"
            android:background="@color/redsina"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/bt_contacts"
            android:text="@string/txt_contacts" />
        <RadioButton
            android:button="@null"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ff9100"
            android:text="@string/txt_me"
            android:checked="false"
            android:id="@+id/bt_me" />


    </RadioGroup>


</RelativeLayout>
